# stm32-on-Zephyr

./: CMakeLists.txt
app/: debug.conf  prj.conf  sample.yaml
app/boards/: stm32f4_disco.overlay
app/src/: main.c
